--- a/package.json
+++ b/package.json
@@ -25,19 +25,24 @@
   },
   "homepage": "https://github.com/graasp/graasp-repo#readme",
   "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@types/jest": "27.0.1",
-    "@typescript-eslint/eslint-plugin": "5.4.0",
-    "@typescript-eslint/parser": "5.4.0",
-    "eslint": "^7.13.0",
+    "@commitlint/cli": "16.0.1",
+    "@commitlint/config-conventional": "16.0.0",
+    "@types/eslint": "^8.2.2",
+    "@types/graasp": "github:graasp/graasp-types",
+    "@types/jest": "27.4.0",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
+    "fastify": "^3.25.3",
+    "graasp-test": "github:graasp/graasp-test",
     "husky": "7.0.4",
-    "jest": "27.3.0",
+    "jest": "27.4.7",
     "prettier": "2.5.1",
-    "pretty-quick": "3.1.2",
-    "ts-jest": "27.0.7",
-    "typescript": "4.4.4"
+    "slonik": "^27.1.0",
+    "ts-jest": "27.1.2",
+    "typescript": "^4.0.5"
   },
   "packageManager": "yarn@3.2.0-rc.8"
 }
