--- a/package.json
+++ b/package.json
@@ -31,18 +31,21 @@
     "@types/graasp": "github:graasp/graasp-types",
     "@types/jest": "27.4.0",
     "@types/node": "^17.0.8",
+    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "fastify": "^3.25.3",
     "graasp-test": "github:graasp/graasp-test",
+    "http-status-codes": "2.2.0",
     "husky": "7.0.4",
     "jest": "27.4.7",
     "prettier": "2.5.1",
     "slonik": "^27.1.0",
     "ts-jest": "27.1.2",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "uuid": "8.3.2"
   },
   "packageManager": "yarn@3.2.0-rc.8"
 }
