--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,7 @@
 checksumBehavior: update
-defaultSemverRangePrefix: ''
+
+defaultSemverRangePrefix: ""
+
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-3.2.0-rc.8.cjs
+yarnPath: .yarn/releases/yarn-3.2.1.cjs
