--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@commitlint/cli": "16.0.1",
     "@commitlint/config-conventional": "16.0.0",
-    "@graasp/sdk": "github:graasp/graasp-utils#15/testUtils",
+    "@graasp/sdk": "github:graasp/graasp-sdk",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/eslint": "^8.2.2",
     "@types/jest": "27.4.0",
@@ -38,7 +38,7 @@
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "fastify": "^3.29.1",
-    "graasp-test": "github:graasp/graasp-test#23/sdk",
+    "graasp-test": "github:graasp/graasp-test",
     "http-status-codes": "2.2.0",
     "husky": "7.0.4",
     "jest": "27.4.7",
