--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   "devDependencies": {
     "@commitlint/cli": "16.0.1",
     "@commitlint/config-conventional": "16.0.0",
+    "@graasp/sdk": "github:graasp/graasp-sdk",
+    "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/eslint": "^8.2.2",
-    "@types/graasp": "github:graasp/graasp-types",
     "@types/jest": "27.4.0",
     "@types/node": "^17.0.8",
     "@types/uuid": "8.3.4",
@@ -36,7 +37,7 @@
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
-    "fastify": "^3.25.3",
+    "fastify": "^3.29.1",
     "graasp-test": "github:graasp/graasp-test",
     "http-status-codes": "2.2.0",
     "husky": "7.0.4",
@@ -47,5 +48,5 @@
     "typescript": "^4.0.5",
     "uuid": "8.3.2"
   },
-  "packageManager": "yarn@3.2.0-rc.8"
+  "packageManager": "yarn@3.2.1"
 }
